fix overflow-x

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #272727;
+  overflow-x: hidden;
 }
 
 /* STYLE POUR LE CURSEUR PERSONNALISE */
